Update weith repository implementation